syntax = "proto3";

option csharp_namespace = "CareerCloud.gRPC.Protos";
import "google/protobuf/empty.proto";
//import "google/protobuf/timestamp.proto";
package CareerCloud.gRPC;
service ApplicantProfile{
rpc ReadApplicantProfile(IdRequestProfile) returns(ApplicantProfilePayload);
rpc CreateApplicantProfile(ApplicantProfilePayload) returns (google.protobuf.Empty);
rpc UpdateApplicantProfile(ApplicantProfilePayload) returns (google.protobuf.Empty);
rpc DeleteApplicantProfile(ApplicantProfilePayload) returns (google.protobuf.Empty);
}

message IdRequestProfile{
	string Id=1;

}
message ApplicantProfilePayload{
    string Id=1; 
        string Login=2;       
         
         double  CurrentSalary =3;
         
       double  CurrentRate =4;
        string Currency=5;
           string Country =6;
        
        string Province =7;
        string Street =8;
        string City=9;
        
        string PostalCode=10;
        
        
}